@@ -43,7 +43,7 @@ public class ExecuteStatusBuilder {
     public ExecuteStatusBuilder(String jobId, String s3Bucket, String filename) {
         String jobFileS3KeyPrefix = WpsConfig.getProperty(AWS_BATCH_JOB_S3_KEY_PREFIX);
         this.wpsEndpointUrl = WpsConfig.getAwsWpsEndpointUrl();
-        this.statusFileS3Location = WpsConfig.getS3ExternalURL(s3Bucket, jobFileS3KeyPrefix + jobId + "/" + filename);
+        this.statusFileS3Location = WpsConfig.getExternalURL(s3Bucket, jobFileS3KeyPrefix + jobId + "/" + filename);
         this.jobId = jobId;
     }
 
@@ -87,9 +87,9 @@ public class ExecuteStatusBuilder {
         if (jobStatus == EnumStatus.ACCEPTED) {
             status.setProcessAccepted("Accepted job " + jobId + " for processing");
         } else if (jobStatus == EnumStatus.STARTED) {
-            status.setProcessStarted(getProcessStartedType("Job " + jobId + " is currently running", new Integer(0)));
+            status.setProcessStarted(getProcessStartedType("Job " + jobId + " is currently running", Integer.valueOf(0)));
         } else if (jobStatus == EnumStatus.PAUSED) {
-            status.setProcessPaused(getProcessStartedType("Job " + jobId + " is currently paused", new Integer(0)));
+            status.setProcessPaused(getProcessStartedType("Job " + jobId + " is currently paused", Integer.valueOf(0)));
         } else if (jobStatus == EnumStatus.SUCCEEDED) {
             status.setProcessSucceeded("Job " + jobId + " has completed");
             //  If outputs were passed - add them to the response
